test/Harper/Tests/Bad/issue010_conflTypeDecls.har
value Bag a b c d = {
  data = {
    a :: a; b :: b; c :: c; d :: d;
  }
};

value Bag e f = {
  data = {
    e :: e; f :: f;
  }
};

main :: Integer;
main = 42;